add Bcrypt authentication

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -66,7 +66,7 @@
         <th th:replace="~{fragments/sorting :: sorting('login','Login')}"></th>
         <th th:replace="~{fragments/sorting :: sorting('createdAt','Created_At')}"></th>
         <th th:replace="~{fragments/sorting :: sorting('dateOfBirth','Date_Of_Birth')}"></th>
-        <th th:replace="~{fragments/sorting :: sorting('following_since','Following_Since')}"></th>
+        <th th:replace="~{fragments/sorting :: sorting('followingSince','Following_Since')}"></th>
 <!--        <th>Published</th>-->
         <th>Actions</th>
       </tr>
