--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" th:href="@{/users}">
 <!--            Maxon-->
+            <div th:text="${#authentication.principal.username}"></div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
             <span class="navbar-toggler-icon"></span>
