--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -55,6 +55,11 @@
         </div>
       </div>
     </form>
+    <div>
+      <form action="/users/sorted_by_DOB_month">
+        <button type="submit" class="btn btn-secondary">Sorted by month</button>
+      </form>
+    </div>
   </div>
 
   <div th:if="${users.size() > 0}">
