--- a/src/main/resources/templates/users_sorted_by_dob_month.html
+++ b/src/main/resources/templates/users_sorted_by_dob_month.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<div th:replace="~{fragments/header :: header}"></div>
 <div class="container-fluid" style="max-width: 900px; margin: 0 auto;">
     <h2 class="text-center">Users</h2>
 <table class="table table-hover table-responsive-xl">
