--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -78,7 +78,7 @@
       <tr th:each="user : ${users}">
         <th scope="row">[[${user.id}]]</th>
         <td>[[${user.twitchId}]]</td>
-        <td class="bg-light">[[${user.login}]]</td>
+        <td class="td-bg-color-light">[[${user.login}]]</td>
         <td>[[${user.createdAt}]]</td>
         <td>[[${user.dateOfBirth}]]</td>
         <td>[[${user.FollowingSince}]]</td>
